{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 24,
  "lineage": "df0d29de-c2d9-a11d-b3d0-0a8a610b3d58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052144f26bf80b3d1",
            "domain": "vpc",
            "id": "eipalloc-052144f26bf80b3d1",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-129-33-205.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.33.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "EIP1"
            },
            "tags_all": {
              "name": "EIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-nat-gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07048f3bf06edb930",
            "domain": "vpc",
            "id": "eipalloc-07048f3bf06edb930",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-18-239-112.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.239.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "EIP2"
            },
            "tags_all": {
              "name": "EIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:internet-gateway/igw-0c22c9a1ae50f6939",
            "id": "igw-0c22c9a1ae50f6939",
            "owner_id": "399493655602",
            "tags": {
              "Name": "New internet GW"
            },
            "tags_all": {
              "Name": "New internet GW"
            },
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "dependencies": [
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052144f26bf80b3d1",
            "connectivity_type": "public",
            "id": "nat-015ee75c74bca1b29",
            "network_interface_id": "eni-0b36702a082c38e47",
            "private_ip": "10.0.0.203",
            "public_ip": "3.129.33.205",
            "subnet_id": "subnet-0cb7091c15bd9f65f",
            "tags": {
              "Name": "NAT Gateway public Subnet1"
            },
            "tags_all": {
              "Name": "NAT Gateway public Subnet1"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway1",
            "aws_subnet.pub_subnet1",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07048f3bf06edb930",
            "connectivity_type": "public",
            "id": "nat-09ef33001b62f38cd",
            "network_interface_id": "eni-06aa0386b4ae19c54",
            "private_ip": "10.0.1.178",
            "public_ip": "3.18.239.112",
            "subnet_id": "subnet-0e93fbc5ea731c8ab",
            "tags": {
              "Name": "NAT Gateway public Subnet2"
            },
            "tags_all": {
              "Name": "NAT Gateway public Subnet2"
            }
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway2",
            "aws_subnet.pub_subnet2",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:route-table/rtb-05c945ed8e2bb8132",
            "id": "rtb-05c945ed8e2bb8132",
            "owner_id": "399493655602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015ee75c74bca1b29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table 1"
            },
            "tags_all": {
              "Name": "private route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway1",
            "aws_nat_gateway.nat-gateway1",
            "aws_subnet.pub_subnet1",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:route-table/rtb-018fafd37a5b70dbf",
            "id": "rtb-018fafd37a5b70dbf",
            "owner_id": "399493655602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ef33001b62f38cd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table 2"
            },
            "tags_all": {
              "Name": "private route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-nat-gateway2",
            "aws_nat_gateway.nat-gateway2",
            "aws_subnet.pub_subnet2",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:route-table/rtb-02ed6b788b2393358",
            "id": "rtb-02ed6b788b2393358",
            "owner_id": "399493655602",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c22c9a1ae50f6939",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086c38e32e798a442",
            "route_table_id": "rtb-05c945ed8e2bb8132",
            "subnet_id": "subnet-02e16b21df159383d"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway1",
            "aws_nat_gateway.nat-gateway1",
            "aws_route_table.private_route_table-1",
            "aws_subnet.private-subnet-1",
            "aws_subnet.pub_subnet1",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ac82f8dc7cad42a",
            "route_table_id": "rtb-018fafd37a5b70dbf",
            "subnet_id": "subnet-001b0d5cf93669001"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway2",
            "aws_nat_gateway.nat-gateway2",
            "aws_route_table.private_route_table-2",
            "aws_subnet.private-subnet-2",
            "aws_subnet.pub_subnet2",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-3-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093bf0209d7f32360",
            "route_table_id": "rtb-05c945ed8e2bb8132",
            "subnet_id": "subnet-08291bbe0cc16bed9"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway1",
            "aws_nat_gateway.nat-gateway1",
            "aws_route_table.private_route_table-1",
            "aws_subnet.private-subnet-3",
            "aws_subnet.pub_subnet1",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-4-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa91a45b2c5d4958",
            "route_table_id": "rtb-018fafd37a5b70dbf",
            "subnet_id": "subnet-08f44078990f012b0"
          },
          "dependencies": [
            "aws_eip.eip-for-nat-gateway2",
            "aws_nat_gateway.nat-gateway2",
            "aws_route_table.private_route_table-2",
            "aws_subnet.private-subnet-4",
            "aws_subnet.pub_subnet2",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-1-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0015193e0603eed7c",
            "route_table_id": "rtb-02ed6b788b2393358",
            "subnet_id": "subnet-0cb7091c15bd9f65f"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet1",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-2-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07725e39bb359ae5c",
            "route_table_id": "rtb-02ed6b788b2393358",
            "subnet_id": "subnet-0e93fbc5ea731c8ab"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet2",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0015193e0603eed7c",
            "route_table_id": "rtb-02ed6b788b2393358",
            "subnet_id": "subnet-0cb7091c15bd9f65f"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet1",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07725e39bb359ae5c",
            "route_table_id": "rtb-02ed6b788b2393358",
            "subnet_id": "subnet-0e93fbc5ea731c8ab"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet2",
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:subnet/subnet-02e16b21df159383d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e16b21df159383d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399493655602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 | App Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 1 | App Tier"
            },
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "dependencies": [
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:subnet/subnet-001b0d5cf93669001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001b0d5cf93669001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399493655602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 | App Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 2 | App Tier"
            },
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "dependencies": [
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:subnet/subnet-08291bbe0cc16bed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08291bbe0cc16bed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399493655602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3 | Data Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 3 | Data Tier"
            },
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "dependencies": [
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:subnet/subnet-08f44078990f012b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f44078990f012b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399493655602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 4 | Data Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 4 | Data Tier"
            },
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "dependencies": [
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:subnet/subnet-0cb7091c15bd9f65f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb7091c15bd9f65f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "399493655602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "dependencies": [
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:subnet/subnet-0e93fbc5ea731c8ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e93fbc5ea731c8ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "399493655602",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0835d235e48bff193"
          },
          "dependencies": [
            "aws_vpc.Group10_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Group10_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:399493655602:vpc/vpc-0835d235e48bff193",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0efb9c1c170002603",
            "default_route_table_id": "rtb-02dcb36050ae4c27c",
            "default_security_group_id": "sg-02531435a04e3857d",
            "dhcp_options_id": "dopt-086d6866acbae143c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0835d235e48bff193",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02dcb36050ae4c27c",
            "owner_id": "399493655602",
            "tags": {
              "Name": "group 10 VPC"
            },
            "tags_all": {
              "Name": "group 10 VPC"
            }
          }
        }
      ]
    }
  ]
}